# doc-buddy

./: .env.dist  .pylintrc  README.md  doc-buddy  pyproject.toml
docs/: index.md
docs/src/: config.py.md  main.py.md  util.py.md
docs/src/ai_provider/: __init__.py.md  ai_provider.py.md  google_gen_ai_provider.py.md  open_ai_provider.py.md  vertexai_ai_provider.py.md
docs/src/document/: __init__.py.md  generate_doc.py.md  generate_footer.py.md  generate_toc.py.md
docs/src/file/: __init__.py.md  find_files.py.md  render_tree.py.md
docs/src/process/: __init__.py.md  project_to_text.py.md
scripts/: black.sh  pylint.sh
src/: ai.py  config.py  main.py  util.py
src/AIProvider/: AIProvider.py  GoogleGenAIProvider.py  OpenAIProvider.py
src/ai_provider/: ai_provider.py  google_cloud_ai_provider.py  google_gen_ai_provider.py  ollama_ai_provider.py  open_ai_provider.py  vertexai_ai_provider.py
src/document/: __init__.py  add_readme.py  generate_code_block.py  generate_doc.py  generate_footer.py  generate_preface.py  generate_toc.py  guess_language_for_markdown.py  single_file.py  tree.py-stop
src/file/: __init__.py  find_files.py  render_tree.py
src/fixture/: markdown-explanation
test/: index.md
test/src/: config.py.md  main.py.md  util.py.md
test/src/ai_provider/: __init__.py.md  ai_provider.py.md  google_gen_ai_provider.py.md  open_ai_provider.py.md  vertexai_ai_provider.py.md
test/src/document/: __init__.py.md  generate_code_block.py.md  generate_doc.py.md  generate_footer.py.md  generate_preface.py.md  generate_toc.py.md  (+1 more)
(+3 files in other folders)
